# raze-manual-example

./: Cargo.toml  README.md  WORKSPACE  default.nix  raze.sh
widget/: BUILD
